# modules/dxp/apps/ai-hub/ai-hub-rest-impl/rest-openapi.yaml
@@ -62,6 +62,16 @@ components:
                 externalReferenceCode:
                     type: string
             type: object
+        Configuration:
+            properties:
+                environmentUrls:
+                    type: string
+                externalReferenceCode:
+                    readOnly: true
+                    type: string
+                recipientEmailAddress:
+                    type: string
+            type: object
         ContentRetriever:
             properties:
                 crawlDate:
@@ -190,6 +200,8 @@ components:
                 accountEntryName:
                     type: string
                 liferayDXPURL:
+                    type: string
+                recipientEmailAddress:
                     type: string
                 userAccounts:
                     items:
@@ -417,6 +429,33 @@ paths:
                     content:
                         text/event-stream: {}
             tags: ["Chat"]
+    "/configurations/by-external-reference-code/{externalReferenceCode}":
+        patch:
+            operationId: patchConfigurationByExternalReferenceCode
+            parameters:
+                -   in: path
+                    name: externalReferenceCode
+                    required: true
+                    schema:
+                        type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: "#/components/schemas/Configuration"
+                    application/xml:
+                        schema:
+                            $ref: "#/components/schemas/Configuration"
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/Configuration"
+                        application/xml:
+                            schema:
+                                $ref: "#/components/schemas/Configuration"
+            tags: ["Configuration"]
     "/content-retrievers/by-external-reference-code/{externalReferenceCode}":
         delete:
             operationId: deleteContentRetrieverByExternalReferenceCode
