# modules/dxp/apps/ai-hub/ai-hub-web/src/main/resources/META-INF/resources/js/configuration_form/types/Configuration.ts
@@ -1,0 +1,11 @@
+/**
+ * SPDX-FileCopyrightText: (c) 2026 Liferay, Inc. https://liferay.com
+ * SPDX-License-Identifier: LGPL-2.1-or-later OR LicenseRef-Liferay-DXP-EULA-2.0.0-2023-06
+ */
+
+export type Configuration = {
+	environmentUrls: string;
+	externalReferenceCode: string;
+	r_accountToAIHubConfigurations_accountEntryERC: string;
+	recipientEmailAddress: string;
+};
